# sofascore-collector

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  debug_show_all.py  main.py  pyproject.toml  sofascore-collector-live.service  sofascore-collector-multiple-days.service
.playwright-mcp/: page-2026-06-17T13-28-15-056Z.yml
data/: sofascore.db
examples/: browser_usage.py  collector_usage.py  orchestrator_usage.py  session_pool_usage.py
examples/mock_data/: live_events.json  scheduled_events.json  ws_incident.json  ws_score_update.json
src/: config.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/browser/: README.md  __init__.py  api_fetcher.py  header_capture.py  interceptor.py  manager.py  scores365_interceptor.py  ws_interceptor.py
src/collectors/: __init__.py  base.py  daily_events.py  live_tracker.py  scores365_tracker.py
src/memory/: __init__.py  monitor.py  session_pool.py
src/models/: __init__.py  schemas.py
src/orchestrator/: __init__.py  coordinator.py  handlers.py
src/parsers/: __init__.py  api_response.py  ws_message.py
src/static/: index.html
src/storage/: __init__.py  database.py  file_storage.py  init_db.py  repositories.py  scores365_storage.py
static/: index.html
static/css/: styles.css
static/js/: app.js
tests/: conftest.py
tests/api/: conftest.py  test_health.py  test_live.py  test_matches.py
tests/browser/: test_interceptor.py  test_manager.py  test_ws_interceptor.py
tests/collectors/: __init__.py  test_base.py  test_daily_events.py  test_live_tracker.py
tests/memory/: __init__.py  test_session_pool.py
tests/orchestrator/: test_coordinator.py  test_handlers.py
tests/storage/: conftest.py  (+1 more)
(+10 files in other folders)
