[project]
name = "sofascore-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "playwright>=1.57.0",
    "psutil>=6.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "ty<=0.0.8",
]

[tool.ty]
# Environment configuration
[tool.ty.environment]
python-version = "3.14"
root = ["."]

# Rule configuration (error, warn, or ignore)
[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-missing-import = "error"
invalid-type-form = "error"
